20 September 2007: Wouter
	- fixup and test for NSEC wildcard with empty nonterminals. 
	- makedist.sh fixup for svn info.
	- acl features request in plan.

19 September 2007: Wouter
	- comments about non-packed usage.
	- plan for overload support in 0.6.
	- added testbound tests for a failed resolution from the logs
	  and for failed prime when missing glue.
	- fixup so useless delegation points are not returned from the
	  cache. Also the safety belt is used if priming fails to complete.
	- fixup NSEC rdata not to be lowercased, bind compat.

18 September 2007: Wouter
	- wildcard nsec3 testcases, and fixup to get correct wildcard name.
	- validator prints subtype classification for debug.

17 September 2007: Wouter
	- NSEC3 hash cache unit test.
	- validator nsec3 nameerror test.

14 September 2007: Wouter
	- nsec3 nodata proof, nods proof, wildcard proof.
	- nsec3 support for cname chain ending in noerror or nodata.
	- validator calls nsec3 proof routines if no NSECs prove anything.
	- fixup iterator bug where it stored the answer to a cname under
	  the wrong qname into the cache. When prepending the cnames, the
	  qname has to be reset to the original qname.

13 September 2007: Wouter
	- nsec3 find matching and covering, ce proof, prove namerror msg.

12 September 2007: Wouter
	- fixup of manual page warnings, like for NSD bugreport.
	- nsec3 work, config, max iterations, filter, and hash cache. 

6 September 2007: Wouter
	- fixup to find libevent on mac port install.
	- fixup size_t vs unsigned portability in validator/sigcrypt.
	- please compiler on different platforms, for unreachable code.
	- val_nsec3 file.
	- pthread_rwlock type is optional, in case of old pthread libs.

5 September 2007: Wouter
	- cname, name error validator tests.
	- logging of qtype ANY works.
	- ANY type answers get RRSIG in answer section of replies (but not
	  in other sections, unless DO bit is on).
	- testbound can replay a TCP query (set MATCH TCP in the QUERY).